--- a/wp-content/themes/understrap/sass/theme/Base/_base.scss
+++ b/wp-content/themes/understrap/sass/theme/Base/_base.scss
@@ -105,6 +105,9 @@ a {
 .page .feature-image-container{
   height: 350px;
   margin-top: -20px;
+  @include media-breakpoint-down(sm) { 
+    height: 250px;
+  }
 }
 .feature-image-container {
   overflow: hidden;
